# messie-messenger

./: .env.example  .env.mobile  .gitignore  AGENTS.md  Dockerfile.android  MODULAR_V2_PLAN.md  Makefile  README.md  THIN_V2_PLAN.md  TODO.md  docker-compose.dev.yml  docker-compose.native-crypto.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  plan.md  tauri.conf.json  temp-config.yaml  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.codespaces.yml
.github/workflows/: ios-native-crypto.yml
api-gateway/: Dockerfile.dev  Dockerfile.prod  nginx.dev.conf  nginx.prod.conf
app/: .gitignore  README-openapi.md  README.md  analysis_options.yaml  pubspec.yaml
app/android/: .gitignore  gradle.properties
app/ios/: .gitignore
app/lib/: main.dart
app/test/: matrix_session_test.dart  v2_backup_test.dart  v2_counts_stream_test.dart  v2_login_and_sync_test.dart  v2_notifications_endpoint_test.dart  v2_notifications_test.dart  v2_recovery_test.dart  v2_sas_test.dart  v2_sliding_sync_performance_test.dart  v2_timeline_test.dart  widget_test.dart
app/web/: index.html  manifest.json
backend/: .air.toml  Dockerfile.dev  Dockerfile.prod  README.md  go.mod  go.sum  main.go
backend/api/: openapi.yaml
backend/api-gateway/: nginx.conf
backend/backend/: README.md  go.mod  go.sum  main.go
backend/migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_add_position_to_todo_items.down.sql  000002_add_position_to_todo_items.up.sql
backend/todo-service/: Dockerfile  go.mod  main.go
bindings/: README.md  frb_config.yaml  generate.sh
bindings/android/: build.sh
bindings/ios/: MessieFFI.podspec  build.sh  messie_ffi.xcconfig
core/: Cargo.toml
core/messie-ffi/: Cargo.toml
core/messie-ffi-v2/: Cargo.toml
core/messie-ffi-v2/src/: lib.rs
core/messie-ffi/src/: api.rs  bridge_generated.rs  lib.rs
core/messie-matrix/: Cargo.toml
core/messie-matrix-v2/: Cargo.toml
core/messie-matrix-v2/src/: counts.rs  lib.rs  rooms.rs  timeline.rs
core/messie-matrix-v2/src/client/: management.rs  mod.rs  session.rs
core/messie-matrix-v2/src/common/: envelope.rs  handle_registry.rs  mod.rs  runtime.rs
core/messie-matrix-v2/src/sync/: mod.rs  sliding_sync.rs
core/messie-matrix-v2/tests/: backup.rs  login.rs  notifications.rs  offline.rs  recovery.rs  sas.rs  sliding_sync.rs  subscribe.rs  summaries.rs  timeline.rs
core/messie-matrix/src/: backup.rs  lib.rs  presence.rs  sliding_sync.rs  timeline.rs  verification.rs
core/messie-matrix/tests/: latest_event.rs  notifications.rs  ss_list_timeline.rs
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  backend.md  frontend.md  local-matrix.md  mobile-phase1.md  native-crypto-integration.md  openapi.yaml  prod-readiness-todo.md  ui-features.md  whatsapp-bridge.md
docs/adrs/: 0001-fractional-indexing.md  0002-thin-web-imap-client.md  0003-matrix-cloud-auth.md  0004-matrix-runtime-switching.md  0004-wa-one-account-per-user.md
docs/matrix-native/: crypto-storage-audit.md  native-smoke-tests.md
docs/rfcs/: 0001-fractional-indexing.md  0002-thin-web-imap-client.md
docs/roadmap/: README.md  calendar.md  email.md  matrix.md  roadmap.md  shared.md  todo.md
frontend/: .gitignore  .prettierrc  Dockerfile.dev  Dockerfile.prod  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/scripts/: capacitor-geckoview-patch.mjs  mobile-assets.mjs
frontend/src/: App.svelte  app.css  vite-env.d.ts
frontend/tests/: runtime-adapters.test.ts
infra/matrix/: Dockerfile.dev  Dockerfile.prod  homeserver.dev.yaml  homeserver.prod.yaml
infra/mautrix-whatsapp/: Dockerfile.dev  config.min.yaml  config.yaml  registration.yaml
plugins/native-crypto/: package.json  tsconfig.json
public/: manifest.json
rust/messie-crypto-ffi/: Cargo.toml  build.rs
rust/messie-crypto-ffi/src/: lib.rs  native_crypto.udl
scripts/: setup-gradle-ssl-macos.sh
scripts/matrix/: Dockerfile  cleanup.sh  install_wa_config.sh  package-lock.json  package.json  setup.sh  snapshots.sh  tsconfig.json
scripts/native-crypto/: android-build.sh
src/: App.svelte
src/routes/: calendar.svelte  email.svelte  index.svelte  notes.svelte  todo.svelte
src/services/: calendarService.ts  (+3 more)
(+354 files in other folders)
