[package]
name = "messie-ffi-v2"
version = "0.1.0"
edition = "2021"
description = "FFI exports for Messie Matrix v2"
license = "Apache-2.0"

[lib]
name = "messie_ffi_v2"
crate-type = ["cdylib", "rlib"]

[dependencies]
messie-matrix-v2 = { path = "../messie-matrix-v2" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
android_logger = "0.13"
allo-isolate = "0.1"

[features]
default = []
test-helpers = ["messie-matrix-v2/test-helpers"]
