[package]
name = "messie-ffi"
version = "0.1.0"
edition = "2021"
description = "Flutter Rust Bridge exports for Messie"
authors = ["Messie Team"]
license = "Apache-2.0"

[lib]
name = "messie_ffi"
crate-type = ["cdylib", "rlib"]

[dependencies]
messie-matrix = { path = "../messie-matrix" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
android_logger = "0.13"
