[package]
name = "messie-matrix-v2"
version = "0.1.0"
edition = "2021"
description = "Messie Matrix v2 SDK (separate crate)"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
matrix-sdk = { version = "0.14", default-features = false, features = ["e2e-encryption", "sqlite", "rustls-tls"] }
matrix-sdk-common = { version = "0.14", default-features = false }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
url = "2"
log = "0.4"
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
allo-isolate = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1"
anyhow = "1"
serial_test = "2"

[features]
test-helpers = []
