[package]
name = "messie-matrix"
version = "0.1.0"
edition = "2021"
description = "Matrix SDK wrapper for Messie"
authors = ["Messie Team"]
license = "Apache-2.0"

[dependencies]
anyhow = "1"
matrix-sdk = { version = "0.14", default-features = false, features = ["e2e-encryption", "sqlite", "native-tls"] }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
url = "2"
