[package]
name = "messie-matrix"
version = "0.1.0"
edition = "2021"
description = "Matrix SDK wrapper for Messie"
authors = ["Messie Team"]
license = "Apache-2.0"

[dependencies]
anyhow = "1"

# ⬇️ Switch TLS from native-tls (OpenSSL) → rustls
#    Keep sqlite & e2e features as you already had.
matrix-sdk = { version = "0.14", default-features = false, features = ["e2e-encryption", "sqlite", "rustls-tls"] }

once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
url = "2"
log = "0.4"

# ⬇️ Bundle SQLite so Android doesn’t need system libsqlite3
#    This works even if rusqlite/libsqlite3-sys is only pulled transitively by matrix-sdk.
libsqlite3-sys = { version = "0.35", features = ["bundled"] }

# Sliding sync helpers
allo-isolate = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
