[package]
name = "messie-crypto-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Messie"]
description = "Native crypto bridge for Messie mobile clients"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uniffi = { version = "0.28" }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
uniffi_build = "0.28"

[features]
default = []
